--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,12 +69,7 @@
 
         <div class = "footer_div">  
            <p class="copyright text-muted">
-            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme leopard <a href="https://github.com/leopardpan/leopardpan.github.io"></a> |
-            <iframe
-                style="margin-left: 2px; margin-bottom:-5px;"
-                frameborder="0" scrolling="0" width="91px" height="20px"
-                src="https://ghbtns.com/github-btn.html?user=leopardpan&repo=leopardpan.github.io&type=star&count=true" >
-            </iframe>
+            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme <a href="https://github.com/leopardpan/leopardpan.github.io">leopard</a> | 如有关文章侵犯了你的权益，请联系邮箱
             </p>
         	<div align="right">
     			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
