--- a/_includes/side-panel.html
+++ b/_includes/side-panel.html
@@ -36,14 +36,15 @@
         <p class="panel-cover__description">{{ site.welcome_message }}</p>
         {% endif %}
 
-        <li class="navigation__item"><a href="" title="{{site.blog_button.description}}" class="blog-button">博客首页</a></li>
+        <li class="navigation__item"><a href="/" title="{{item.description}}" class="blog-button">博客首页</a></li>
+        
         <div class="navigation-wrapper">
           <div>
             <nav class="cover-navigation cover-navigation--primary">
               <ul class="navigation">
                 <li class="navigation__item"><a href="/#blog" title="{{site.blog_button.description}}" class="blog-button">{{site.blog_button.title}}</a></li>
                 {% for item in site.nav %}
-                  <li class="navigation__item"><a href="{{item.url}}" title="{{item.description}}">{{item.title}}</a></li>
+                <li class="navigation__item"><a href="{{item.url}}" title="{{item.description}}">{{item.title}}</a></li>
                 {% endfor %}
               </ul>
             </nav>
