--- a/_includes/featured-tags.html
+++ b/_includes/featured-tags.html
@@ -15,12 +15,22 @@
             url_encode/decode is for escaping otherwise extra <a> will get generated 
             but it will break sort...
         {% endcomment %}
+        {% for tag in site.tags %}
+				<a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
+					data-encode="{{ tag[0] | strip | url_encode }}"
+					class="tag-button"
+					title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+					{{ tag[0] }}
+					<sup>{{tag[1].size}}</sup>
+				</a>
+				{% endfor %}
+        <!--
         {% for tag in site.tags %}{% if tag[1].size > site.featured-condition-size %}
                 <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}" 
                     href="{{ site.baseurl }}/archive/?tag={{ tag[0] | url_encode }}"
                     title="{{ tag[0] }}"
                     rel="{{ tag[1].size }}">{{ tag[0] }}</a>
-        {% endif %}{% endfor %}
+        {% endif %}{% endfor %} -->
         {% endcapture %}
         {{ tags | split:'</a>' | sort | join:'</a>' }}
     </div>
