--- a/_includes/featured-tags.html
+++ b/_includes/featured-tags.html
@@ -18,6 +18,7 @@
         {% for tag in site.tags %}
 				<a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
 					data-encode="{{ tag[0] | strip | url_encode }}"
+                    href="{{ site.baseurl }}/archive/?tag={{ tag[0] | url_encode }}"
 					class="tag-button"
 					title="{{ tag[0] }}" rel="{{ tag[1].size }}">
 					{{ tag[0] }}
