--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,9 @@
                 <!-- SNS Link -->
                 {% include sns-links.html center=true %}
                 <p class="copyright text-muted">
-                    {{ site.title }} {{ site.time | date: '%Y' }}
+                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
+                    Powered by <a href="http://huangxuan.me">Hux Blog</a>
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
