--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <!-- SNS Link -->
                 {% include sns-links.html center=true %}
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ Hux Blog }} {{ site.time | date: '%Y' }}
+                    Copyright &copy; Hux Blog {{ site.time | date: '%Y' }}
                     <br>
                     Powered by <a href="http://huangxuan.me">Hux Blog</a>
                     <iframe
